Modify windows build and run script